[package]
name = "coverage_mon"
version = "0.3.0"
authors = [ "Michael Bohn <spaceodyssey@gmx.de>" ]
description = "Physical Coverage Monitoring"
license = "GPL-3.0"
repository = "https://github.com/Ragnaroek/coverage-mon"

[dependencies]
trellis = "0.2.1"
hd44780 = "0.2.2"
hyper = "=0.9.1"
serde = "0.8"
serde_json = "0.8"
config= "0.1"
log = "0.3"
env_logger = "0.3"
