[package]
name = "coverage_mon"
version = "0.3.1"
authors = [ "Michael Bohn <spaceodyssey@gmx.de>" ]
description = "Physical Coverage Monitoring"
license = "GPL-3.0"
repository = "https://github.com/Ragnaroek/coverage-mon"

[dependencies]
trellis = "0.2.1"
hd44780 = "0.2.2"
hyper = "=0.9.1"
serde = "1.0.27"
serde_json = "1.0.9"
config = "0.7.0"
log = "0.4.1"
env_logger = "0.4.3"

[[bin]]
name = "coverage_mon"
path = "src/coverage_mon.rs"
